Automatic code cleanup and reformatting
Took 13 minutes